--- a/Проект 06.05.24/css/style.css
+++ b/Проект 06.05.24/css/style.css
@@ -180,3 +180,10 @@ width: 1440px;
     justify-content: center;
     margin-top: -15px;
 }
+
+#hamburger{
+    background-image: url("Images/free-icon-menu-4254068\ \(1\).png");
+        width: 128px;
+        height: 128px;
+        margin-bottom: 20px;
+}
