--- a/ДЗ 24.06.24/css/style.css
+++ b/ДЗ 24.06.24/css/style.css
@@ -188,21 +188,29 @@ width: 1440px;
         margin-bottom: 19px;
 }
 
-
-
-@media screen and (max-width: 1200px) {
-    #menu_desktop{
+@media screen and (min-width: 1200px) {
+    #menu_mobile {
         display: none;
     }
-
-    #menu_mobile{
+    #menu_desktop {
         display: block;
     }
-
-    #menu_mobile .nav > ul > li {
-        display: block;
-        margin-left: 0;
-        margin-bottom: 10px;
+    #hamburger {
+        display: none;
     }
+}
 
+@media screen and (max-width: 1200px) {
+    #menu_desktop {
+        display: none;
+    }
+    #hamburger {
+        display: block;
+    }
+}
+
+#menu_mobile .nav > ul > li {
+    display: block;
+    margin-left: 0;
+    margin-bottom: 10px;
 }
