--- a/kino/css/style.css
+++ b/kino/css/style.css
@@ -143,7 +143,7 @@ body {
 
 .slider-content p {
     font-size: 15px;
-    max-width: 400px;
+   
     margin-bottom: 15px;
 }
 
@@ -186,8 +186,94 @@ body {
     height: 50px;
     background-color: sienna;
 }
+.main{
+    background-color: #0C0B0B;
+    padding-top: 60px;
+}
 
+.main h2{
+    color: #fff;
+    margin-left: 16px;
+}
 
+.on_now p{
+    color: #7E7E7E;
+    
+}
+
+.on_now h3{
+    color: #fff;
+    
+}
+
+.on_now{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.on_now img{
+    width: 245px;
+    margin-left: 5px;
+}
+
+.h21{
+    display: flex;
+    margin-bottom: 30px;
+}
+.psam{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.psam img{
+    width: 237;
+    height: 300px;
+    margin-left: 5px;
+}
+
+.h2{
+    display: flex;
+    margin-top: 100px;
+    margin-bottom: 30px;
+}
+
+.h22{
+    display: flex;
+    margin-top: 100px;
+    margin-bottom: 30px;
+}
+
+.ras {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.ras img{
+    width: 237;
+    height: 300px;
+    margin-left: 5px;
+}
+
+.h23{
+    display: flex;
+    margin-top: 100px;
+    margin-bottom: 30px;
+}
+
+.ram {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.ram img{
+    width: 237;
+    height: 300px;
+    margin-left: 5px;
+}
 
 
 
@@ -206,4 +292,71 @@ body {
     .header {
             display: none;
         }
+  }
+
+  @media screen and (max-width: 1100px) {
+    /*MOBILE*/
+    .slider-content {
+        top: 20%;
+    }
+
+    .slider-content p {
+        font-size: 27.2px;
+    
+    }
+
+    .watch-now {
+       
+        font-size: 1.73em;
+    }
+  }
+
+  @media screen and (max-width: 1400px) {
+    /*MOBILE*/
+    .slider-content {
+        top: 20%;
+    }
+
+    .slider-content p {
+        font-size: 16.2px;
+    
+    }
+
+    .watch-now {
+        font-size: 1.73em;
+    }
+  }
+
+
+  @media screen and (max-width: 820px) {
+    /*MOBILE*/
+    .slider-content {
+        top: 20%;
+    }
+
+    .slider-content p {
+        font-size: 26.2px;
+    
+    }
+
+    .watch-now {
+        font-size: 1.73em;
+    }
+  }
+
+  @media screen and (min-width: 375px) {
+    /*MOBILE*/
+    .slider-content {
+        top: 20%;
+    }
+
+    .slider-content p {
+        font-size: 13.2px;
+    
+    }
+
+    .watch-now {
+        font-size: 0.6em;
+    
+    }
   }
