--- a/kino/css/style.css
+++ b/kino/css/style.css
@@ -357,6 +357,78 @@ h3{
     padding-bottom: 15px;
 }
 
+/*MOVIE PAGE*/
+
+.links_movie a{
+    color: #fff;
+    text-decoration: none;
+    font-size: 1.24em;
+    font-weight: 400;
+}
+
+.links_movie li {
+    display: inline-block;
+    margin-left: 45px;
+
+}
+
+#info_movie{
+    color: #3C3B3B;
+    margin-left: 45px;
+    margin-top: 30px;
+}
+
+/*REGISTER & LOG IN*/
+
+.register_container { 
+    background-color: #1c1c1c;
+    color: white;
+    padding: 30px;
+    border-radius: 8px;
+    max-width: 400px;
+    margin: 40px auto;
+    margin-top: 200px;
+}
+
+.register_container h2 {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.register_container label {
+    display: flex;
+    margin-bottom: 5px;
+}
+
+.register_container input {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 15px;
+    border: none;
+    border-radius: 4px;
+    background-color: #333;
+    color: white;
+}
+
+.register_container button {
+    background-color: #ff5019;
+    color: white;
+    padding: 10px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    width: 100%;
+}
+
+.register_container button:hover {
+    background-color: #d13d23;
+}
+
+.register_container p {
+    text-align: center;
+    margin-top: 15px;
+}
+
 /*MEDIA */
 @media screen and (min-width: 1125px) {
     /*MOBILE*/
